# paper-daily-fetch-skills

./: .gitignore  README.md  pyproject.toml
.claude/: INSTALL.md
.codex/: INSTALL.md
.openclaw/: INSTALL.md
.opencode/: INSTALL.md
config/: paper_fetch.toml
docs/: README.claude-code.md  README.codex.md  README.openclaw.md  README.opencode.md
examples/: sample_collect.json  sample_digest.md  sample_openclaw_payload.json  skill_usage.md
scripts/: resolve_python.sh  run_cli.sh
skills/claude-code-paper-digest/: SKILL.md
skills/codex-paper-digest/: SKILL.md
skills/openclaw-paper-digest/: SKILL.md
skills/opencode-paper-digest/: SKILL.md
src/paper_daily_fetch/: __init__.py  cli.py  config.py  discovery.py  enrichment.py  figures.py  history.py  models.py  ranking.py  render.py  service.py  state.py
src/paper_daily_fetch/infra/: http.py
src/paper_daily_fetch/pipeline/: __init__.py  annotate.py  discover.py  enrich.py  merge.py  rank.py
templates/: daily_digest.md  openclaw_message.txt
tests/: test_annotation.py  test_assets.py  test_cli.py  test_enrichment.py  test_figures.py  test_history.py  test_http.py  test_pipeline.py  test_ranking.py  test_render.py  test_runtime_scripts.py  test_sources.py  test_state.py
tests/fixtures/: arxiv_abs_page_with_code.html  arxiv_page_with_code_and_figures.html  arxiv_page_without_code.html  arxiv_search_results.html  collect_feed.xml  hf_daily.html  hf_daily_hydrater.html  hf_trending.html  hf_trending_hydrater.html  paperswithcode_paper.html  paperswithcode_search.html
(+5 files in other folders)
