[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-daily-fetch"
version = "0.1.0"
description = "Cross-agent paper discovery and rendering CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
paper-daily-fetch = "paper_daily_fetch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
